--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:mem:quizDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+
+# Disable Hibernate DDL auto-generation
+spring.jpa.hibernate.ddl-auto=none
 
